src/objects/Speaker_Slot__c.object
<CustomObject>
    <fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Speaker Slots</relationshipLabel>
        <relationshipName>Speaker_Slots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Speaker_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Speaker__r.Id ,  Speaker__r.Speaker_Name__c ,&quot;_self&quot;)</formula>
        <label>Speaker Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Speaker</label>
        <referenceTo>Speaker__c</referenceTo>
        <relationshipLabel>Speaker Slots</relationshipLabel>
        <relationshipName>Speaker_Slots</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker Slot</label>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>Speaker Slot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>